# split-aspect-poc

./: .bazelrc  .gitignore  BUILD  CLAUDE.md  MODULE.bazel  MODULE.bazel.bcr  README.md  aspect.bzl
.github/workflows/: ci.yml
common/: BUILD  artifact_location.bzl  common.bzl  dependencies.bzl  ide_info.bzl  provider.bzl  target_key.bzl  version.bzl
config/: BUILD  config.bzl  config.tpl  extension.bzl
extension/: private.bzl  version_repo.bzl
intellij/: BUILD  aspect.bzl  provider.bzl
main/: aspect.bzl  provider.bzl
modules/: BUILD  cc_info.bzl  cc_toolchain_info.bzl  common.bzl  java_info.bzl  java_toolchain_info.bzl  provider.bzl  py_info.bzl  xcode_info.bzl
private/: bazel_repos.bzl  bazel_rules.bzl  extension.bzl  local_registry.bzl
private/lib/: BUILD  bep.kt  config.kt  deploy.kt  exec.kt  loads.kt  transformers.kt
private/proto/: BUILD  common.proto  ide_info.proto
private/repos/: BUILD  bazel_versions.bzl  bcr_archive.bzl
private/rules/: BUILD  aspect_lib.bzl  bazel_binary.bzl  local_registry.bzl  local_registry.py
testing/: BUILD
testing/fixtures/cpp/: BUILD  defs.bzl
testing/fixtures/cpp/builtin/: BUILD.fix
testing/fixtures/cpp/builtin/lib/: BUILD.fix  source.cc
testing/fixtures/cpp/simple/: BUILD.fix
testing/fixtures/cpp/simple/lib/: BUILD.fix
testing/fixtures/cpp/tool/: BUILD.fix  tool.bzl  tool.cc
testing/fixtures/cpp/transition/: BUILD.fix  foo_bar.bzl  main.cc
testing/fixtures/java/: BUILD
testing/fixtures/java/simple/: .bazelrc  BUILD.fix  Main.java
testing/fixtures/java/simple/lib/: BUILD.fix  Util.java
testing/fixtures/python/: BUILD
testing/fixtures/python/args/: BUILD.fix
testing/fixtures/python/simple/: BUILD.fix  lib.py
testing/rules/: BUILD  aspect_fixture.proto  aspect_test.bzl  builder.kt  builder.proto  config.bzl  defs.bzl  fixture.bzl  fixture.kt  resource.kt  utils.kt
testing/rules/aspect/: BUILD  builder.kt  defs.bzl
testing/rules/cache/: BUILD  builder.kt  builder.proto  cache.bzl
testing/rules/fixture/: BUILD  builder.kt  builder.proto  fixture.bzl  fixture.kt
testing/rules/integration/: BUILD  builder.kt  builder.proto  defs.bzl  dependency.bzl  extension.bzl  repos.bzl
testing/rules/integration/test/: BUILD.fix
testing/rules/lib/: BUILD  action.kt  action.proto  config.bzl  project.bzl  test_utils.kt  zip.kt
testing/tests/cpp/: BUILD  BuiltinRulesTest.kt  ToolDepTest.kt  ToolchainTest.kt  XcodeTest.kt
testing/tests/general/: BUILD  BuildFileTest.kt  TargetTest.kt  TransitionTest.kt
testing/tests/general/transition/: BUILD  TransitionTest.kt  multi_arch_binary.bzl
testing/tests/java/: BUILD  SimpleTest.kt
testing/tests/lib/: BUILD  DeployTest.kt
testing/tests/python/: BUILD  PyBinaryTest.kt  PyLibraryTest.kt  PyTestTest.kt
testing/tests/python/pybinary/: BUILD  PyBinaryTest.kt
testing/tests/python/pylibrary/: BUILD  PyLibraryTest.kt
testing/tests/python/pytest/: BUILD  PyTestTest.kt
testing/utils/: BUILD  resource.kt  utils.kt
tools/: BUILD  RunfilesRepo.java
tools/differ/: BUILD  compare.kt  filters.kt  json.kt  main.kt  workspace.kt
tools/lib/: BUILD  exec.kt
