module(name = "intellij_aspect")

bazel_dep(name = "rules_cc", version = "0.2.9")
bazel_dep(name = "rules_python", version = "1.6.3")
bazel_dep(name = "bazel_skylib", version = "1.8.2")

config = use_extension("//config:extension.bzl", "config")
use_repo(config, "intellij_config")

bazel_dep(name = "rules_pkg", version = "1.1.0")
bazel_dep(name = "protobuf", version = "32.1")
bazel_dep(name = "rules_java", version = "8.16.1")
bazel_dep(name = "rules_kotlin", version = "2.1.9")
bazel_dep(name = "rules_jvm_external", version = "6.8")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "junit:junit:4.13.2",
        "com.google.truth:truth:1.4.4",
        "com.google.code.gson:gson:2.10.1",
        "com.google.errorprone:error_prone_annotations:2.23.0",
        "com.google.guava:guava:33.0.0-jre",
        "com.fasterxml.jackson.core:jackson-databind:2.20.1",
        "org.jetbrains.kotlinx:kotlinx-cli-jvm:0.3.6",
    ],
    known_contributing_modules = [
        "bazel_worker_java",
        "intellij_aspect",
        "protobuf",
    ],
)
use_repo(maven, "maven")

registry = use_extension("//private:extension.bzl", "registry")
registry.install(
    bazel = [
        "7.7.0",
        "8.4.2",
        "9.0.0rc3",
    ],
    rules_cc = [
        "0.1.1",
        "0.2.9",
        "0.2.14",
    ],
    rules_python = [
        "1.0.0",
        "1.6.3",
    ],
)
use_repo(registry, "registry_bazel", "registry_rules_cc", "registry_rules_python")
