module(name = "intellij_aspect")

bazel_dep(name = "rules_python", version = "1.8.2")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "rules_pkg", version = "1.2.0")
bazel_dep(name = "protobuf", version = "33.4")
bazel_dep(name = "rules_java", version = "9.3.0")
bazel_dep(name = "rules_kotlin", version = "2.2.0")
bazel_dep(name = "rules_jvm_external", version = "6.9")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "junit:junit:4.13.2",
        "com.google.truth:truth:1.4.4",
        "com.google.code.gson:gson:2.10.1",
        "com.google.errorprone:error_prone_annotations:2.23.0",
        "com.google.guava:guava:33.0.0-jre",
        "com.fasterxml.jackson.core:jackson-databind:2.20.1",
        "org.jetbrains.kotlinx:kotlinx-cli-jvm:0.3.6",
    ],
    known_contributing_modules = [
        "bazel_worker_java",
        "intellij_aspect",
        "protobuf",
    ],
)
use_repo(maven, "maven")

bazel_registry = use_extension("//private:extension.bzl", "bazel_registry")
bazel_registry.bazel(versions = [
    "7.7.0",
    "8.5.1",
    "9.0.0",
])
bazel_registry.bcr(
    commit = "4dca62e2ed42e03cf0e361201f4fcb0b3c0f6dbd",
    sha256 = "d6f16bb30507b85beeafe4594f6f60acec7b1252c385e3b2296a72bec8775dcb",
)
use_repo(bazel_registry, "bazel_versions", "bcr_archive")
